copied tons of code

--- a/src/main/resources/assets/avaplus/lang/en_us.lang
+++ b/src/main/resources/assets/avaplus/lang/en_us.lang
@@ -1,6 +1,8 @@
 # blocks
 tile.block_test.name=Test Block
 tile.replicator.name=Replicator
+tile.amogus.name=Replicator
 
 # container
 container.replicator=Replicator
+container.amogus=Replicator
