fixed progress bar
fixed issue of progress bar breaking if rfConsumed > Integer.MAX_VALUE (in case of rfToReplicate > Integer.MAX_VALUE)
client and server may now be slightly desynced if scaling needs to be applied

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
 -> get item texture working
--> fix progress bar when rfToReplicate > Integer.MAX_VALUE
+-> können wir das konfigurierbar machen? (rfToReplicate)
 
 -> code cleanup
